--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/aswitalski/dom-test/issues"
   },
-  "homepage": "https://github.com/aswitalski/dom-test#readme"
+  "homepage": "https://github.com/aswitalski/dom-test#readme",
+  "devDependencies": {
+    "assert": "^1.4.1",
+    "mocha": "^3.2.0"
+  }
 }
