--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A subset of DOM Level 4 model for tests in Node.js",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "coverage": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha --",
+    "travis": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha --report lcovonly -- && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "repository": {
     "type": "git",
@@ -23,6 +25,9 @@
   "homepage": "https://github.com/aswitalski/dom-test#readme",
   "devDependencies": {
     "assert": "^1.4.1",
-    "mocha": "^3.2.0"
+    "coveralls": "^2.11.16",
+    "istanbul": "^0.4.5",
+    "mocha": "^3.2.0",
+    "mocha-lcov-reporter": "^1.3.0"
   }
 }
