--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "coverage": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha",
-    "travis": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha --report lcovonly && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
+    "coverage": "nyc mocha",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -25,10 +25,10 @@
   "homepage": "https://github.com/aswitalski/dom-test#readme",
   "devDependencies": {
     "assert": "^1.4.1",
-    "coveralls": "^2.11.16",
-    "istanbul": "^0.4.5",
-    "mocha": "^3.2.0",
+    "coveralls": "^3.0.2",
+    "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
-    "sinon": "^1.17.7"
+    "nyc": "^13.1.0",
+    "sinon": "^7.0.0"
   }
 }
